tests/reference/asr-test_assign9-51278b8.stderr
semantic error: Assignment to an input function parameter `x` is not allowed
 --> tests/errors/test_assign9.py:2:5
  |
2 |     x = 2
  |     ^ 
